--- a/.github/workflows/dependabot-janitor.yml
+++ b/.github/workflows/dependabot-janitor.yml
@@ -43,6 +43,7 @@ jobs:
         uses: actions/github-script@v7
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           script: |
             const fs = require('fs');
