--- a/.github/workflows/dependabot-auto-merge.yml
+++ b/.github/workflows/dependabot-auto-merge.yml
@@ -9,7 +9,7 @@ permissions:
 jobs:
   auto-merge:
     runs-on: ubuntu-latest
-    if: (github.actor == 'dependabot[bot]' || github.actor == 'github-actions[bot]') && github.event.pull_request.base.ref == 'dev'
+    if: (github.actor == 'dependabot[bot]' || startsWith(github.head_ref, 'janitor/')) && github.event.pull_request.base.ref == 'dev'
     steps:
       - name: Dependabot metadata
         id: metadata
@@ -23,11 +23,11 @@ jobs:
         run: gh pr merge --merge --delete-branch "$PR_URL"
         env:
           PR_URL: ${{github.event.pull_request.html_url}}
-          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Enable auto-merge for Janitor PRs
-        if: github.actor == 'github-actions[bot]' && startsWith(github.head_ref, 'janitor/')
+        if: startsWith(github.head_ref, 'janitor/')
         run: gh pr merge --merge --delete-branch "$PR_URL"
         env:
           PR_URL: ${{github.event.pull_request.html_url}}
-          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
